feat: update about section

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
                         <li><a data-scroll="data-scroll" href="#news">News</a></li>
                         <li><a data-scroll="data-scroll" href="#projects">Projects</a></li>
                         <li><a data-scroll="data-scroll" href="#coursework">Coursework</a></li>
+                        <li><a href="https://www.espncricinfo.com/">Blog</a></li>
+
                     </ul>
                 </nav>
             </div>
@@ -42,6 +44,9 @@
             <section class="about">
                 <div class="container">
                     <h2 class="section-title">About</h2>
+                    <p>I am an incoming freshman at <a href="https://www.cs.purdue.edu/">Purdue University</a>, intending to major in <a href="https://www.cs.purdue.edu/undergraduate/curriculum/bachelor.html">Computer Science</a> and minor in <a href="https://catalog.purdue.edu/preview_program.php?catoid=15&poid=24135">Bioinformatics</a> and <a href="https://catalog.purdue.edu/preview_program.php?catoid=15&poid=23044">Mathematics</a>. 
+                        My academic interests revolve around 
+                    </p>
 
                 </div>
             </section>
