chore: edit assets

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <title>Sarthak Mangla</title>
         <meta name="description" content="Slim Lim is a computer scientist, researcher, and software engineer interested in interfaces for computing."/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png"/>
-        <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png"/>
+        <link rel="icon" type="image/png" sizes="32x32" href="assets/img/icon.png"/>
+        <link rel="icon" type="image/png" sizes="16x16" href="assets/img/icon.png"/>
         <link rel="stylesheet" href="assets/css/main.css"/>
         <script async="async" defer="defer" src="assets/lib/smooth-scroll.js"></script><script async="async" defer="defer" src="https://use.fontawesome.com/93f8d6d0b2.js"></script>
     </head>
@@ -46,6 +46,8 @@
                     <h2 class="section-title">About</h2>
                     <p>I am an incoming freshman at <a href="https://www.cs.purdue.edu/">Purdue University</a>, intending to major in <a href="https://www.cs.purdue.edu/undergraduate/curriculum/bachelor.html">Computer Science</a> and minor in <a href="https://catalog.purdue.edu/preview_program.php?catoid=15&poid=24135">Bioinformatics</a> and <a href="https://catalog.purdue.edu/preview_program.php?catoid=15&poid=23044">Mathematics</a>. 
                         My academic interests revolve around 
+                        I've messed around with 
+                        In high-school, I spent a good amount of time 
                     </p>
 
                 </div>
