--- a/index.html
+++ b/index.html
@@ -44,11 +44,24 @@
             <section class="about">
                 <div class="container">
                     <h2 class="section-title">About</h2>
-                    <p>I am an incoming freshman at <a href="https://www.cs.purdue.edu/">Purdue University</a>, intending to major in <a href="https://www.cs.purdue.edu/undergraduate/curriculum/bachelor.html">Computer Science</a> and minor in <a href="https://catalog.purdue.edu/preview_program.php?catoid=15&poid=24135">Bioinformatics</a> and <a href="https://catalog.purdue.edu/preview_program.php?catoid=15&poid=23044">Mathematics</a>. 
-                        My academic interests revolve around 
-                        I've messed around with 
-                        In high-school, I spent a good amount of time 
+                    <!-- 
+                        development stuff
+                        hobbies
+                        high school 
+                        feel free to reach out  
+                     -->
+                    <p>I am an incoming freshman at <a href="https://www.cs.purdue.edu/">Purdue University</a>, intending to major in <a href="https://www.cs.purdue.edu/undergraduate/curriculum/bachelor.html">Computer Science</a> and minor in <a href="https://catalog.purdue.edu/preview_program.php?catoid=15&poid=24135">Bioinformatics</a> and <a href="https://catalog.purdue.edu/preview_program.php?catoid=15&poid=23044">Mathematics</a>.
+                        I'm looking to graduate through the <a href="https://www.cs.purdue.edu/undergraduate/curriculum/track_MI_fall2019.html">Machine Intelligence</a>, <a href="https://www.cs.purdue.edu/undergraduate/curriculum/track_ss_fall2019.html">Systems Software</a>, and the <a href="https://www.cs.purdue.edu/undergraduate/curriculum/track_database_fall2019.html">Database and Information Systems</a> tracks.</p>    
+                    <p> Currently, my academic interests include personalized healthcare, programming languages, algorithms, cryptography, and the applications of machine learning in natural science. 
+                        I'm well versed with App Development using Kotlin, NDK C++, or even Swift (for some reason). I enjoy messing around with PyTorch & Rust as well, and I'm exploring functional programming languages like Haskell and OCaml.
                     </p>
+                    <p>
+                        I also happen to really 
+                    </p>
+
+                    <p> In high-school, I </p>
+
+                    <p> Feel free to reach out to me via email if you have</p>
 
                 </div>
             </section>
