--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                     <ul class="header__nav list-unstyled list-inline">
                         <li><a data-scroll="data-scroll" href="#projects">Projects</a></li>
                         <li><a data-scroll="data-scroll" href="#coursework">Coursework</a></li>
-                        <li><a data-scroll="data-scroll" href="https://mail.google.com/mail/u/0/#inbox">Wiki</a></li>
-                        <li><a href="https://www.espncricinfo.com/">Blog</a></li>
+                        <li><a data-scroll="data-scroll" href="coming-soon.html">Wiki</a></li>
+                        <li><a href="coming-soon.html">Blog</a></li>
 
                     </ul>
                 </nav>
@@ -48,12 +48,6 @@
             <section class="about">
                 <div class="container">
                     <h2 class="section-title">About</h2>
-                    <!-- 
-                        development stuff
-                        hobbies
-                        high school 
-                        feel free to reach out  
-                     -->
                     <p>I am an incoming freshman at <a href="https://www.cs.purdue.edu/">Purdue University</a>, intending to major in <a href="https://www.cs.purdue.edu/undergraduate/curriculum/bachelor.html">Computer Science</a> and minor in <a href="https://catalog.purdue.edu/preview_program.php?catoid=15&poid=24135">Bioinformatics</a> and <a href="https://catalog.purdue.edu/preview_program.php?catoid=15&poid=23044">Mathematics</a>.
                         I'm looking to graduate through the <a href="https://www.cs.purdue.edu/undergraduate/curriculum/track_MI_fall2019.html">Machine Intelligence</a>, <a href="https://www.cs.purdue.edu/undergraduate/curriculum/track_ss_fall2019.html">Systems Software</a>, and the <a href="https://www.cs.purdue.edu/undergraduate/curriculum/track_database_fall2019.html">Database and Information Systems</a> tracks.</p>    
                     <p> Currently, my academic interests span personalized healthcare, algorithms, cryptography, and the applications of machine learning in natural science. 
@@ -64,7 +58,7 @@
                         I <a href="https://aplo.asia/results/aplo-2021-results/">represented India</a> at the <a href="https://ioling.org/participants/IND">International Linguistics Olympiad in 2021</a>, and I've attended my country's <a href="https://www.iarcs.org.in/inoi/2022/inoi2022/results_inoi2022.php#ioitc">informatics olympiad camp</a> twice.
                     </p>
 
-                    <p> Feel free to reach out to me via <a href="mailto:mangla@purdue.edu">email</a>, I'm always down to discuss any interesting ideas or problems!</p>
+                    <p> Feel free to reach out to me via <a href="mailto:mangla@purdue.edu">email</a>; I'm always down to discuss any interesting ideas or problems!</p>
 
                 </div>
             </section>
@@ -72,7 +66,7 @@
             <section id="projects" class="resume">
                 <div class="container">
                     <h2 class="section-title">Projects</h2>
-                    <p>Some of the best ones!</p>
+                    <p>Some of my favorites!</p>
                     <dl>
                         <dt class="resume__item-summary">
                             <h3 class="resume__title">IndivHear</h3>
@@ -151,7 +145,7 @@
     <footer class="footer dark">
         <div class="container">
             <section class="blurb">
-                <p>Inspired by <a href="https://slim.computer/">Slimberly Lim</a></p>
+                <p>Website template by <a href="https://slim.computer/">Slimberly Lim</a></p>
             </section>
             <ul class="footer__links list-unstyled list-inline">
                 <li><a href="assets/resume.pdf" class="no-highlight"><i aria-hidden="true" title="Resume" class="fa fa-file-text-o"></i></a></li>
