feat: add meta tags

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
         <meta charset="utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <title>Sarthak Mangla</title>
-        <meta name="description" content="Slim Lim is a computer scientist, researcher, and software engineer interested in interfaces for computing."/>
+        <meta name="description" content="Sarthak Mangla is a incoming freshman at Purdue University, mainly interesting in building intelligent systems."/>
+        <meta name="keywords" content="Sarthak Mangla, Purdue, Mangla, Sarthak, IndivHear">
+        <meta name="author" content="Sarthak Mangla">
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <link rel="icon" type="image/png" sizes="32x32" href="assets/img/icon.png"/>
         <link rel="icon" type="image/png" sizes="16x16" href="assets/img/icon.png"/>
