--- a/index.html
+++ b/index.html
@@ -126,13 +126,13 @@
                     <h2 class="section-title">Coursework</h2>
                         <h3 class="coursework__course-title">Fall 2022</h3>
                         <ul class="list-default">
-                            <li><a href="">CS 180</a> Problem Solving & Object-Oriented Programming (Black)</li>
+                            <li><a href="">CS 180</a> Problem Solving & Object-Oriented Programming [Black]</li>
                             <li><a href="">MA 261</a> Multivariate Calculus</li>
                             <li><a href="">CS 191</a> Freshman Resources Seminar</li>
                             <li><a href="">CS 193</a> Tools Seminar</li>
                             <li><a href="">TDM 101</a> The Data Mine Seminar I</li>
                             <li><a href="">PHIL 11005</a> Introduction To Philosophy Through Video Games</li>
-                            <li><a href="">TDM 111</a> Corporate Partners I</li>
+                            <li><a href="">TDM 111</a> Corporate Partners I [<a href="https://projects.the-examples-book.com/projects/computer-vision/">Merck: Computer Vision</a>]</li>
                         </ul>
 
                         <h3 class="coursework__course-title">AP Credit</h3>
