fix: embarrassing meta tag bug

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <title>Sarthak Mangla</title>
-        <meta name="description" content="Sarthak Mangla is a incoming freshman at Purdue University, mainly interesting in building intelligent systems."/>
+        <meta name="description" content="Sarthak Mangla is a incoming freshman at Purdue University, mainly interested in building intelligent systems."/>
         <meta name="keywords" content="Sarthak Mangla, Purdue, Mangla, Sarthak, IndivHear">
         <meta name="author" content="Sarthak Mangla">
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
