add resume and edit text

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <p class="header__affiliation">Computer Science @ Purdue</p>
                 <p class="header__contact">mangla [at] purdue [dot] edu</p>
                  <ul class="header__links list-unstyled list-inline">
-                    <!-- <li><a href="assets/resume.pdf" class="no-highlight"><i aria-hidden="true" title="Resume" class="fa fa-file-text-o"></i></a></li> -->
+                    <li><a href="assets/resume.pdf" class="no-highlight"><i aria-hidden="true" title="Resume" class="fa fa-file-text-o"></i></a></li>
                     <li><a href="http://github.com/knightron0" class="no-highlight"><i aria-hidden="true" title="GitHub" class="fa fa-github-alt"></i></a></li>
                     <li><a href="http://twitter.com/knightron0" class="no-highlight"><i aria-hidden="true" title="Twitter" class="fa fa-twitter"></i></a></li>
                     <li><a href="http://linkedin.com/in/sarthakmangla" class="no-highlight"><i aria-hidden="true" title="LinkedIn" class="fa fa-linkedin"></i></a></li>
@@ -49,10 +49,10 @@
             <section class="about">
                 <div class="container">
                     <h2 class="section-title">About</h2>
-                    <p>I am an incoming freshman at <a href="https://www.cs.purdue.edu/">Purdue University</a>, intending to major in <a href="https://www.cs.purdue.edu/undergraduate/curriculum/bachelor.html">Computer Science</a> and minor in <a href="https://catalog.purdue.edu/preview_program.php?catoid=15&poid=24135">Bioinformatics</a> and <a href="https://catalog.purdue.edu/preview_program.php?catoid=15&poid=23044">Mathematics</a>.
-                        I'm looking to graduate through the <a href="https://www.cs.purdue.edu/undergraduate/curriculum/track_MI_fall2019.html">Machine Intelligence</a>, <a href="https://www.cs.purdue.edu/undergraduate/curriculum/track_ss_fall2019.html">Systems Software</a>, and the <a href="https://www.cs.purdue.edu/undergraduate/curriculum/track_database_fall2019.html">Database and Information Systems</a> tracks.</p>    
-                    <p> Currently, my academic interests span personalized healthcare, algorithms, cryptography, and the applications of machine learning in natural science. 
-                        I'm well versed with app development using <a href="https://developer.android.com/kotlin">Kotlin</a>, <a href="https://developer.android.com/ndk/guides/cpp-support">NDK C++</a>, or even <a href="https://developer.apple.com/swift/">Swift</a> (for some reason). I enjoy messing around with <a href="https://github.com/pytorch/pytorch">PyTorch</a> & <a href="https://keras.io/">Keras</a>, and I'm exploring functional programming languages like <a href="https://leanprover.github.io/">Lean</a> and <a href="https://ocaml.org/">OCaml</a> right now. Some of my other interests include birdwatching, Christopher Nolan movies, hotpot, <a href="https://en.wikipedia.org/wiki/Table_football">foosball</a>, watching <a href="https://en.wikipedia.org/wiki/Delhi_Capitals">my IPL team</a> lose, and Confucius Say memes.
+                    <p>I am a freshman at <a href="https://www.cs.purdue.edu/">Purdue University</a>, intending to major in <a href="https://www.cs.purdue.edu/undergraduate/curriculum/bachelor.html">Computer Science</a> and minor in <a href="https://catalog.purdue.edu/preview_program.php?catoid=15&poid=24135">Bioinformatics</a> and <a href="https://catalog.purdue.edu/preview_program.php?catoid=15&poid=23044">Mathematics</a>. I'm working as an Undergraduate Researcher at the <a href="https://engineering.purdue.edu/HeinzLab">Purdue Heinz Lab</a>, under <a href="https://www.purdue.edu/hhs/slhs/directory/faculty/heinz_michael.html">Prof. Micheal Heinz</a>.
+                        I'm looking to graduate through the <a href="https://www.cs.purdue.edu/undergraduate/curriculum/track_MI_fall2019.html">Machine Intelligence</a>, <a href="https://www.cs.purdue.edu/undergraduate/curriculum/track_ss_fall2019.html">Systems Software</a>, and the <a href="https://www.cs.purdue.edu/undergraduate/curriculum/track_database_fall2019.html">Database and Information Systems</a> tracks. </p>
+                    <p> Currently, my academic interests span personalized healthcare, algorithms, cryptography, and the applications of machine learning in natural science.
+                        I'm well versed with app development using <a href="https://developer.android.com/kotlin">Kotlin</a>, <a href="https://developer.android.com/ndk/guides/cpp-support">NDK C++</a>, or even <a href="https://developer.apple.com/swift/">Swift</a> (for some reason). I enjoy messing around with <a href="https://github.com/pytorch/pytorch">PyTorch</a> & <a href="https://keras.io/">Keras</a>, and I'm exploring functional programming languages like <a href="https://leanprover.github.io/">Lean</a> and <a href="https://ocaml.org/">OCaml</a> right now. Some of my other interests include birdwatching, Christopher Nolan movies, hotpot, <a href="https://en.wikipedia.org/wiki/Table_football">foosball</a>, watching <a href="https://en.wikipedia.org/wiki/Delhi_Capitals">my IPL team</a> (or <a href="https://en.wikipedia.org/wiki/Chelsea_F.C.">PL team</a>) lose, and Confucius Say memes.
                     </p>
 
                     <p> In high-school, I spent a fair share of my time preparing for & competing in <a href="https://ioinformatics.org/">informatics</a> and <a href="https://ioling.org/">linguistics</a> olympiads.
@@ -149,7 +149,7 @@
                 <p>Website template by <a href="https://slim.computer/">Slimberly Lim</a></p>
             </section>
             <ul class="footer__links list-unstyled list-inline">
-                <!-- <li><a href="assets/resume.pdf" class="no-highlight"><i aria-hidden="true" title="Resume" class="fa fa-file-text-o"></i></a></li> -->
+                <li><a href="assets/resume.pdf" class="no-highlight"><i aria-hidden="true" title="Resume" class="fa fa-file-text-o"></i></a></li>
                 <li><a href="http://github.com/knightron0"><i aria-hidden="true" title="GitHub" class="fa fa-github-alt"></i></a></li>
                 <li><a href="http://twitter.com/knightron0"><i aria-hidden="true" title="Twitter" class="fa fa-twitter"></i></a></li>
                 <li><a href="http://linkedin.com/in/sarthakmangla"><i aria-hidden="true" title="LinkedIn" class="fa fa-linkedin"></i></a></li>
