--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
         <link rel="stylesheet" href="assets/css/main.css"/>
         <script async="async" defer="defer" src="assets/lib/smooth-scroll.js"></script><script async="async" defer="defer" src="https://use.fontawesome.com/93f8d6d0b2.js"></script>
     </head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZJTRF09Q2T"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-ZJTRF09Q2T');
+    </script>
     <body>
         <header class="header container">
             <div class="header__intro">
