--- a/index.html
+++ b/index.html
@@ -132,6 +132,15 @@
             <section id="coursework" class="coursework">
                 <div class="container">
                     <h2 class="section-title">Coursework</h2>
+                        <h3 class="coursework__course-title">Spring 2022</h3>
+                            <ul class="list-default">
+                                <li><a href="">CS 182</a> Foundations of Computer Science</li>
+                                <li><a href="">CS 240</a> Programming in C</li>
+                                <li><a href="">MA 351</a> Linear Algebra</li>
+                                <li><a href="">TDM 102</a> The Data Mine Seminar II</li>
+                                <li><a href="">TDM 112</a> Corporate Partners II [<a href="https://projects.the-examples-book.com/projects/computer-vision/">Merck: Computer Vision</a>]</li>
+                                <li><a href="">SCLA 101</a> Transformative Texts, Critical Thinking & Communication I: Antiquity to Modernity</li>
+                            </ul>
                         <h3 class="coursework__course-title">Fall 2022</h3>
                         <ul class="list-default">
                             <li><a href="">CS 180</a> Problem Solving & Object-Oriented Programming [Black]</li>
