--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <p class="header__contact">mangla [at] purdue [dot] edu</p>
                  <ul class="header__links list-unstyled list-inline">
                     <li><a href="http://github.com/knightron0" class="no-highlight"><i aria-hidden="true" title="GitHub" class="fa fa-github-alt"></i></a></li>
-                    <li><a href="http://twitter.com/knightron0" class="no-highlight"><i aria-hidden="true" title="Twitter" class="fa fa-twitter"></i></a></li>
+                    <li><a href="http://twitter.com/msarthak29" class="no-highlight"><i aria-hidden="true" title="Twitter" class="fa fa-twitter"></i></a></li>
                     <li><a href="http://linkedin.com/in/sarthakmangla" class="no-highlight"><i aria-hidden="true" title="LinkedIn" class="fa fa-linkedin"></i></a></li>
                     <li><a href="https://www.producthunt.com/@sarthak_mangla" class="no-highlight"><i aria-hidden="true" title="ProductHunt" class="fa fa-product-hunt"></i></a></li>
                     <li><a href="https://open.spotify.com/user/up84kh9ljr6t1ek47yke6uuik" class="no-highlight"><i aria-hidden="true" title="Spotify" class="fa fa-spotify"></i></i></a></li>
@@ -133,6 +133,7 @@
                     <h2 class="section-title">Coursework</h2>
                         <h3 class="coursework__course-title">Spring 2022</h3>
                             <ul class="list-default">
+                                <li><a href="">BME 296</a> Computational Hearing Research [<a href="https://engineering.purdue.edu/HeinzLab/people">Heinz Lab</a>]</li>
                                 <li><a href="">CS 182</a> Foundations of Computer Science</li>
                                 <li><a href="">CS 240</a> Programming in C</li>
                                 <li><a href="">MA 351</a> Linear Algebra</li>
