feat: huge update

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
         gtag('config', 'G-ZJTRF09Q2T');
     </script>
     <body>
-        <header class="header container">
+        ill update this one day. 
+        <br></br>
+        meanwhile, find me <a href="http://twitter.com/msarthak29">here</a>
+        <!-- <header class="header container">
             <div class="header__intro">
                 <h1 class="header__title">Sarthak Mangla </h1>
                 <p class="header__affiliation">Computer Science @ Purdue</p>
@@ -158,9 +161,9 @@
                         </ul>
                 </div>
             </section>i
-        </main>
+        </main> -->
     </body>
-    <footer class="footer dark">
+    <!-- <footer class="footer dark">
         <div class="container">
             <section class="blurb">
                 <p>Website template by <a href="https://slim.computer/">Slimberly Lim</a></p>
@@ -173,7 +176,7 @@
                 <li><a href="https://open.spotify.com/user/up84kh9ljr6t1ek47yke6uuik" class="no-highlight"><i aria-hidden="true" title="Spotify" class="fa fa-spotify"></i></i></a></li>
             </ul>
         </div>
-    </footer>
+    </footer> -->
     <script defer="defer" type="text/javascript">smoothScroll.init();</script><script type="text/javascript">(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
